able to render user friends categories

--- a/views/categories.handlebars
+++ b/views/categories.handlebars
@@ -42,11 +42,12 @@
          <br />
          <div class="text-center col-md-6 col-lg-5 col-xl-4">
             <h5 class="font-weight-normal border-top border-light pt-4 mb-4"><a class="dark-grey-text"
-               href="#">Love</a></h5>
+               href="/play/{{information.userId}}/{{information.friendId}}/4">Love{{information.friendId}}</h5>
             <i class="fa fa-street-view fa-3x green-text mb-4"></i><br />
             <button type="button" class="btn btn-outline-dark waves-effect">
             converse
             </button>
+            </a>
          </div>
       </div>
    </section>
