--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -45,10 +45,10 @@
           <input type="text" id="password" placeholder="password" name="password" class="form-control">
         </div>
 
-
         <button type="submit" class="btn btn-info btn-sm ml-0">Login<i class="far fa-paper-plane ml-2"></i></button><br />
-
+        <a href="/signup">
         <button type="submit" class="btn btn-info btn-sm ml-0">Signup<i class="far fa-paper-plane ml-2"></i></button>
+        </a>
 
       <br />
         
