starting on favorite method

--- a/views/question.handlebars
+++ b/views/question.handlebars
@@ -6,7 +6,9 @@
 
     <!--Card image-->
     <div class="view overlay">
-      <img class="card-img-top" src={{this.photo_url}}
+      {{!-- <img class="card-img-top" src={{this.photo_url}}
+        alt="Card image cap"> --}}
+            <img class="card-img-top" src="https://www.cerclemagazine.com/wp-content/uploads/2017/10/316_N-Atlantic-Ocean-Cliffs-of-Moher-1989.jpg"
         alt="Card image cap">
       <a href="#!">
         <div class="mask rgba-white-slight"></div>
@@ -17,11 +19,9 @@
     <div class="card-body">
 
       <!--Title-->
-      <h4 class="card-title">how do i pass in category here</h4>
       <!--Text-->
       <p class="card-text"> {{this.question_string}} </p>
       <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-      <button type="button" class="btn btn-light-blue btn-md">Mark as Done</button>
       <button type="button" class="btn btn-light-blue btn-md">Favorite</button>
 
     </div>
