--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -16,7 +16,11 @@
       <div class="col-md-5 p-lg-5 mx-auto my-5">
         <h1 class="display-4 font-weight-normal">the coolest people I know</h1>
         <p class="lead font-weight-normal">Now, try to render all the user's friends here</p>
-        <a class="btn btn-outline-secondary" href="#">Coming soon</a>
+        <a href="/{{user_id}}/addfriend">
+        <button type="button" class="btn btn-outline-dark waves-effect">Add Friend
+                    </button>
+                    </a>
+        
       </div>
       <div class="product-device box-shadow d-none d-md-block"></div>
       <div class="product-device product-device-2 box-shadow d-none d-md-block"></div>
