--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -60,7 +60,7 @@
 
       <div class="col-md-6">
          <div class="d-flex flex-column justify-content-center align-items-center h-100">
-<form class="text-center border border-light p-5" action="#!">
+<form class="text-center border border-light p-5" action="/signup" method="POST">
 
     <p class="h4 mb-4">let's get started</p>
     <button type="button" class="btn btn-fb"><i class="fab fa-facebook-f pr-1"></i> Spotify</button>
