--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -107,11 +107,9 @@
     
     <h3 class="font-weight-bold text-center dark-grey-text pb-2">About</h3>
     <hr class="w-header my-4">
-    <p class="lead text-center text-muted pt-2 mb-5">MDB founded to help startups, and it still shapes the way we work today.</p>
+    <p class="lead text-center text-muted pt-2 mb-5">Do You Remember
+    </p>
 
-<div class="row align-items-center">   <button type="button" class="btn btn-outline-dark waves-effect">
-                    My Favorite Button
-                </button>
     </div> 
     <div class="row">
       <div class="col-lg-8 mx-auto">
